<resources>
    <string name="app_name">CarSharing</string>
    <string name="login_with_email">Email Login</string>
    <string name="login_with_google">Google Login</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="create_acc_text"><u>New user? Register NOW!</u></string>
    <string name="forgot_pass_text"><u>I forgot my password.</u></string>
    <string name="already_user"><u>Already a user? Log in.</u></string>
    <string name="register">Register</string>

    <string name="no_internet">No Internet Connection</string>
    <string name="airplane_mode">Airplane Mode On</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="LogInText">Log in to continue</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send_email">Send Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>

    <string name="def">Default Default</string>
    <string name="use_vehicle_text">Use a vehicle</string>
    <string name="provide_vehicle_text">Provide a vehicle</string>
    <string name="car_name">Name of the car</string>
    <string name="car_description">Describe your car</string>
    <string name="car_desc_title">Car Description</string>
    <string name="price_per_day">Price per Day</string>
    <string name="done">Done</string>
    <string name="reservation_date">Enter reservation date</string>
    <string name="fullname">Full Name</string>
    <string name="conf_pass">Confirm Password</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="upload_img">Upload Images</string>
    <string name="owner_info">Owner Information</string>
    <string name="ratings">Ratings</string>
    <string name="enter_review">Enter a review..</string>
    <string name="see_all"><u>See All</u></string>
    <string name="delete_post">Delete Post</string>
    <string name="edit_post">Edit Post</string>
</resources>
