<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isLoading"
            type="Boolean" />

        <variable
            name="post"
            type="com.car.sharing.models.Post" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.fragments.AddEditPost">


        <com.iitr.kaishu.nsidedprogressbar.NSidedProgressBar
            android:id="@+id/pBar"
            style="@style/ProgressBar"
            android:layout_gravity="center"
            android:visibility="@{isLoading ? View.VISIBLE : View.GONE}" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:visibility="@{isLoading? View.GONE : View.VISIBLE}">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/car_photos_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/car_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="5dp"

                    android:hint="@string/car_name"
                    app:hintTextAppearance="@style/HintText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/car_photos_rv">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{post != null ? post.carName : ``}"
                        android:inputType="textCapWords"
                        android:paddingVertical="13dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/car_description"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:hint="@string/car_description"
                    app:hintTextAppearance="@style/HintText"
                    app:layout_constraintEnd_toEndOf="@+id/car_name"
                    app:layout_constraintStart_toStartOf="@+id/car_name"
                    app:layout_constraintTop_toBottomOf="@+id/car_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{post != null ? post.carDescription : ``}"
                        android:gravity="top"
                        android:lines="6"
                        android:maxLength="500" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/price"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:hint="@string/price_per_day"
                    app:hintTextAppearance="@style/HintText"
                    app:layout_constraintEnd_toEndOf="@+id/car_description"
                    app:layout_constraintStart_toStartOf="@+id/car_description"
                    app:layout_constraintTop_toBottomOf="@+id/car_description">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{post != null ? String.valueOf(post.price) : ``}"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/upload_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/upload_img"
                    app:layout_constraintStart_toStartOf="@+id/price"
                    app:layout_constraintTop_toBottomOf="@+id/price" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/provide_done"
                    style="@style/PrimaryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/done"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/price"
                    app:layout_constraintStart_toStartOf="@+id/price"
                    app:layout_constraintTop_toBottomOf="@+id/upload_image_button" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </FrameLayout>
</layout>
